--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <%= require('html-loader!../NavBar/navbar.html').default %>
+    <%= require('../partials/navbar.html') %>
     <div class="container app">
       <div class="row align-items-center align-self-center">
         <div class="col">
@@ -28,6 +28,6 @@
         </div>
       </div>
     </div>
-    <%= require('html-loader!../Footer/footer.html').default %>
+    <%= require('../partials/footer.html') %>
   </body>
 </html>
