--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -11,6 +11,11 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <%= require('../partials/navbar.html') %>
@@ -20,7 +25,7 @@
           <div class="d-flex flex-column align-items-center">
             <h1 class="page-title mb-4"><strong>Hello, World!</strong></h1>
             <img
-              src="<%= require('../../images/logo.png').default %>"
+              src="<%= require('/src/images/logo.png') %>"
               alt="Logo"
               width="176"
             />
