--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -1,38 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Webpack Boilerplate | Basic Static Website</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="pragma" content="no-cache" />
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <%= require('../partials/navbar.html') %>
-    <div class="container app">
-      <div class="row align-items-center align-self-center">
-        <div class="col">
-          <div class="d-flex flex-column align-items-center">
-            <h1 class="page-title mb-4"><strong>Hello, World!</strong></h1>
-            <img
-              src="<%= require('/src/images/logo.png') %>"
-              alt="Logo"
-              width="176"
-            />
-          </div>
-        </div>
+<div class="container">
+  <div class="row align-items-center align-self-center">
+    <div class="col">
+      <div class="d-flex flex-column align-items-center">
+        <h1 class="page-title mb-4"><strong>Hello, World!</strong></h1>
+        <img src="/src/images/logo.png" alt="Logo" width="176" />
       </div>
     </div>
-    <%= require('../partials/footer.html') %>
-  </body>
-</html>
+  </div>
+</div>
