🚧 Basic navigation bar template
- Including regular template optimization

--- a/src/views/partials/navbar.html
+++ b/src/views/partials/navbar.html
@@ -35,9 +35,29 @@
     </ul>
   </div>
 
-  <nav class="mainbar-wrap" aria-label="Primary navigation">
+  <nav class="mainbar-wrap d-flex" aria-label="Primary navigation">
     <div class="brand">
-      <img src="/src/images/logo.png" alt="Logo" width="176" />
+      <img src="/src/images/logo.png" alt="Logo" height="50" />
+    </div>
+    <div class="module d-flex flex-row align-items-center">
+      <div class="module-dropdown">
+        <a href=""><i></i>Explore</a>
+      </div>
+    </div>
+    <div class="module d-flex flex-row align-items-center">
+      <div class="module-search">
+        <a href=""><i>S</i></a>
+      </div>
+      <div class="module-cart">
+        <a href=""><i>C</i></a>
+      </div>
+      <div class="module-v-separator"></div>
+      <div class="module-user">
+        <i></i>
+        <span><a href="">Sign In</a></span>
+        <span>or</span>
+        <span><a href="">Register</a></span>
+      </div>
     </div>
   </nav>
 </header>
