--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,12 +6,15 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 16px;
 }
-.app,
-.app > .row {
+#app,
+#app > main,
+#app > main > .row {
   min-height: inherit;
 }
-img {
-  border-radius: 50%;
+
+#app > main {
+  margin-top: -122px;
+  padding-top: 122px;
 }
 
 small {
