--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -1,4 +1,7 @@
 .main-header {
+  position: sticky;
+  top: -48px;
+
   .secondarybar-wrap {
     background-color: #f1f2f3;
     padding-top: 6px;
@@ -31,6 +34,42 @@
 
   .mainbar-wrap {
     background-color: #fff;
+    margin: 0 -12px;
+    padding: 0 12px;
     box-shadow: 0px 0px 2px rgba(14, 31, 53, 0.12);
+
+    .brand {
+      padding: 12px;
+      margin-right: 48px;
+    }
+
+    .module {
+      &:last-of-type {
+        margin-left: auto;
+      }
+
+      &-dropdown {
+      }
+
+      &-search {
+        margin: 0 16px;
+      }
+
+      &-cart {
+        @extend .module-search;
+        margin-right: 20px;
+      }
+
+      &-user {
+        padding: 0 12px;
+      }
+
+      &-v-separator {
+        width: 1px;
+        height: 100%;
+        margin: 0 12px;
+        border-left: 1px solid rgba(46, 43, 69, 0.1);
+      }
+    }
   }
 }
