--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container">
   <div class="row align-items-center align-self-center">
     <div class="col">
       <div class="d-flex flex-column align-items-center">
@@ -7,4 +7,4 @@
       </div>
     </div>
   </div>
-</div>
+</main>
