--- a/src/views/partials/navbar.html
+++ b/src/views/partials/navbar.html
@@ -37,7 +37,11 @@
 
   <nav class="mainbar-wrap d-flex" aria-label="Primary navigation">
     <div class="brand">
-      <img src="/src/images/logo.png" alt="Logo" height="50" />
+      <img
+        src="<%= require('/src/images/logo.png') %>"
+        alt="Logo"
+        height="50"
+      />
     </div>
     <div class="module d-flex flex-row align-items-center">
       <div class="module-dropdown">
