--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,2 +1,116 @@
 .main-footer {
+  background: #2e2b45 url("/src/images/footer-bg.jpg") no-repeat center / 100%;
+  background-size: cover;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      90deg,
+      #2e2b45 1.45%,
+      rgba(46, 43, 69, 0.75) 100%
+    );
+    z-index: 1;
+  }
+
+  .container {
+    z-index: 2;
+    position: relative;
+    padding-top: 36px;
+    padding-bottom: 36px;
+  }
+
+  .brand {
+    a {
+      display: inline-block;
+
+      img {
+        height: 72px;
+      }
+    }
+  }
+
+  .links-wrap {
+    margin-top: 36px;
+
+    .links-col {
+      &:not(:first-child) {
+        margin-left: 66px;
+      }
+
+      h1 {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 22px;
+        line-height: 28px;
+        letter-spacing: 0.8px;
+        color: #ffffff;
+        margin-bottom: 12px;
+      }
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+          &:not(:last-child) {
+            margin-bottom: 16px;
+          }
+
+          a {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 17px;
+            line-height: 22px;
+            letter-spacing: -0.408px;
+            color: rgba(255, 255, 255, 0.8);
+            text-decoration: none;
+
+            &:hover {
+              color: rgba(255, 255, 255, 1);
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .bottom-wrap {
+    margin-top: 56px;
+
+    .copy {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 18px;
+      letter-spacing: -0.078px;
+      color: rgba(255, 255, 255, 0.6);
+    }
+
+    .social {
+      a {
+        // &:first-child {
+        // }
+        // &:last-child {
+        // }
+
+        margin: 0 8px;
+        height: 32px;
+        width: 32px;
+        left: 1288px;
+        text-decoration: none;
+
+        svg {
+          width: inherit;
+          height: inherit;
+        }
+      }
+    }
+  }
 }
