--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -9,25 +9,70 @@
     margin: 0 -12px;
 
     a {
-      padding: 8px 0;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 18px;
+      letter-spacing: -0.078px;
+      color: #2e2b45;
       display: inline-block;
-      line-height: normal;
+      text-decoration: none;
+      padding: 8px 0;
     }
 
     .nav-left {
       a {
         margin: 0 12px;
+
+        i {
+          width: 12px;
+          height: 12px;
+          margin-left: 2px;
+          display: inline-flex;
+
+          svg {
+            width: inherit;
+            height: inherit;
+
+            > path {
+              fill: #2e2b45;
+            }
+          }
+        }
       }
     }
 
     .nav-right {
-      display: flex;
       list-style: none;
       margin: 0;
       padding: 0;
 
       li {
         margin: 0 12px;
+
+        .button {
+          background: #2e2b45;
+          border-radius: 4px;
+          padding-left: 12px;
+          padding-right: 12px;
+          color: #fff;
+
+          i {
+            width: 16px;
+            height: 16px;
+            margin-right: 4px;
+            display: inline-flex;
+
+            svg {
+              width: inherit;
+              height: inherit;
+
+              > path {
+                fill: #f8d178;
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -37,6 +82,17 @@
     margin: 0 -12px;
     padding: 0 12px;
     box-shadow: 0px 0px 2px rgba(14, 31, 53, 0.12);
+
+    a {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 17px;
+      line-height: 22px;
+      letter-spacing: -0.408px;
+      color: #2e2b45;
+      display: inline-block;
+      text-decoration: none;
+    }
 
     .brand {
       padding: 12px;
@@ -49,6 +105,38 @@
       }
 
       &-dropdown {
+        position: relative;
+      }
+
+      &-user {
+        padding: 0 12px;
+
+        span {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 17px;
+          line-height: 22px;
+          letter-spacing: -0.408px;
+          color: rgba(60, 60, 67, 0.6);
+          display: inline-block;
+        }
+      }
+
+      &-dropdown i,
+      &-user i {
+        width: 20px;
+        height: 20px;
+        margin-right: 8px;
+        display: inline-flex;
+
+        svg {
+          width: inherit;
+          height: inherit;
+
+          > path {
+            fill: #2e2b45;
+          }
+        }
       }
 
       &-search {
@@ -60,8 +148,15 @@
         margin-right: 20px;
       }
 
-      &-user {
-        padding: 0 12px;
+      &-search i,
+      &-cart i {
+        width: 28px;
+        height: 28px;
+
+        svg {
+          width: inherit;
+          height: inherit;
+        }
       }
 
       &-v-separator {
