--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="top-wrap d-flex flex-row">
       <div class="brand">
-        <a href="">
+        <a href="/">
           <img
             src="<%= require('/src/images/logo-white-text.png') %>"
             alt="Sports Learning Online logo"
@@ -13,19 +13,34 @@
 
     <div class="links-wrap d-flex flex-row">
       <%= require('./footerLinks.html')({title: 'About', links: [{text: `About
-      Us`}, {text: `Become an Author`, href: '/author'}]}) %>
+      Us`}, {text: `Become an Author`}, {text: 'Schools\ &\ Programs'}, {text:
+      'Help\ &\ FAQs'}]}) %> <%= require('./footerLinks.html')({title: 'Quick\
+      Links', links: [{text: `COVID-19`}, {text: `Return\ to\ Play\
+      Operations`}, {text: 'Sports\ Complexes'}, {text: 'Fan\ Experience'}]}) %>
     </div>
 
-    <div class="bottom-wrap d-flex flex-row">
+    <div
+      class="bottom-wrap d-flex flex-row justify-content-between align-items-center"
+    >
       <div class="copy">
         Copyright &copy; 2021 Sports Learning Online. All rights reserved.
       </div>
-      <div class="social">
-        <a href="">f</a>
-        <a href="">t</a>
-        <a href="">g</a>
-        <a href="">in</a>
-        <a href="">ig</a>
+      <div class="social d-flex flex-row">
+        <a href="#" rel="noopener noreferrer" target="_blank">
+          <%= require('/src/images/brands-facebook.svg?inline') %>
+        </a>
+        <a href="#" rel="noopener noreferrer" target="_blank">
+          <%= require('/src/images/brands-twitter.svg?inline') %>
+        </a>
+        <a href="#" rel="noopener noreferrer" target="_blank">
+          <%= require('/src/images/brands-google.svg?inline') %>
+        </a>
+        <a href="#" rel="noopener noreferrer" target="_blank">
+          <%= require('/src/images/brands-linkedin.svg?inline') %>
+        </a>
+        <a href="#" rel="noopener noreferrer" target="_blank">
+          <%= require('/src/images/brands-instagram.svg?inline') %>
+        </a>
       </div>
     </div>
   </div>
