--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,11 @@
 @import "navbar";
 @import "footer";
+@import "elements/hero";
+@import "elements/sections";
+@import "elements/table";
+@import "elements/categories";
+@import "elements/pills";
+@import "pages/index";
 
 body {
   min-height: 100vh;
@@ -15,8 +21,8 @@ body {
 }
 
 #app > main {
-  margin-top: -122px;
-  padding-top: 122px;
+  margin-top: -120px;
+  padding-top: 120px;
 }
 
 small {
@@ -27,4 +33,8 @@ small {
   &.tiny {
     font-size: 12px;
   }
+}
+
+a {
+  text-decoration: none;
 }
