--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -1,14 +1,192 @@
-<main class="container">
-  <div class="row align-items-center align-self-center">
-    <div class="col">
-      <div class="d-flex flex-column align-items-center">
-        <h1 class="page-title mb-4"><strong>Hello, World!</strong></h1>
-        <img
-          src="<%= require('/src/images/logo.png') %>"
-          alt="Logo"
-          width="176"
-        />
+<main class="index">
+  <div class="hero d-flex align-items-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 d-flex flex-column justify-content-center">
+          <h1>Sports business contents now at your fingertips</h1>
+          <a href="#" class="button">Explore the Hub</a>
+        </div>
       </div>
     </div>
   </div>
+
+  <section class="container">
+    <div class="row">
+      <h2 class="light">Lessons from the legends</h2>
+      <p>Magna fugiat consectetur consectetur irure deserunt.</p>
+      <div
+        id="lessons-carousel"
+        class="carousel"
+        data-carousel-type="steps"
+      ></div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row">
+        <h2 class="dark">Videos</h2>
+        <p>
+          Aliquip Lorem est esse ad excepteur enim duis quis labore dolore
+          excepteur aliqua ea.
+        </p>
+        <div
+          id="videos-carousel"
+          class="carousel"
+          data-carousel-type="free-scroll"
+        ></div>
+      </div>
+    </div>
+  </section>
+
+  <div class="container">
+    <div class="row">
+      <section class="col-8">
+        <h2 class="light">Podcasts</h2>
+        <p>
+          Labore duis sit labore et pariatur qui sint aliquip sunt commodo
+          exercitation adipisicing.
+        </p>
+        <div class="table">
+          <div class="table-head">
+            <div class="row-wrap">
+              <div class="row">
+                <div class="col-6">Title</div>
+                <div class="col-3">Podcast by</div>
+                <div class="col">
+                  <i><%= require('/src/images/icons/time.svg?inline') %></i>
+                </div>
+                <div class="col text-end">Preview</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="table-body">
+            <div class="row-wrap">
+              <div class="row">
+                <div
+                  class="col-6 d-flex flex-row align-self-center align-items-center"
+                >
+                  <div class="cover">
+                    <img
+                      src="<%= require('/src/images/podcast-cover-1.jpg') %>"
+                      alt=""
+                    />
+                  </div>
+                  <strong>Sint voluptate in qui aute ea laboris veniam.</strong>
+                </div>
+                <div class="col-3 d-flex flex-row align-self-center">
+                  Fermentum Integer
+                </div>
+                <div
+                  class="col d-flex flex-row align-self-center justify-content-end"
+                >
+                  49:11
+                </div>
+                <div
+                  class="col d-flex flex-row align-self-center justify-content-end"
+                >
+                  <button class="podcast-preview-button"></button>
+                </div>
+              </div>
+            </div>
+
+            <div class="row-wrap">
+              <div class="row">
+                <div
+                  class="col-6 d-flex flex-row align-self-center align-items-center"
+                >
+                  <div class="cover">
+                    <img
+                      src="<%= require('/src/images/podcast-cover-2.jpg') %>"
+                      alt=""
+                    />
+                  </div>
+                  <strong
+                    >Voluptate dolor qui velit Lorem esse commodo incididunt
+                    et.</strong
+                  >
+                </div>
+                <div class="col-3 d-flex flex-row align-self-center">
+                  Cursus: Volutpat Ac Et
+                </div>
+                <div
+                  class="col d-flex flex-row align-self-center justify-content-end"
+                >
+                  1:22:32
+                </div>
+                <div
+                  class="col d-flex flex-row align-self-center justify-content-end"
+                >
+                  <button class="podcast-preview-button"></button>
+                </div>
+              </div>
+            </div>
+
+            <div class="row-wrap">
+              <div class="row">
+                <div
+                  class="col-6 d-flex flex-row align-self-center align-items-center"
+                >
+                  <div class="cover">
+                    <img
+                      src="<%= require('/src/images/podcast-cover-2.jpg') %>"
+                      alt=""
+                    />
+                  </div>
+                  <strong
+                    >Deserunt duis id duis id est non aute tempor voluptate ut
+                    irure cupidatat.</strong
+                  >
+                </div>
+                <div class="col-3 d-flex flex-row align-self-center">
+                  Cursus: Volutpat Ac Et
+                </div>
+                <div
+                  class="col d-flex flex-row align-self-center justify-content-end"
+                >
+                  57:00
+                </div>
+                <div
+                  class="col d-flex flex-row align-self-center justify-content-end"
+                >
+                  <button class="podcast-preview-button"></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="col">
+        <h2 class="light">Our top categories</h2>
+        <p>
+          Dolor sint aliquip voluptate veniam nisi cupidatat ex do et
+          exercitation in aliqua velit exercitation.
+        </p>
+        <div class="categories">
+          <a href="" class="pill">Pro Sports</a
+          ><a href="" class="pill">Olympic</a><a href="" class="pill">College</a
+          ><a href="" class="pill">Youth Sports</a
+          ><a href="" class="pill">Sponsorships</a
+          ><a href="" class="pill">Marketing</a
+          ><a href="" class="pill">Fan Experience</a
+          ><a href="" class="pill">Event Management</a
+          ><a href="" class="pill">Project Management</a>
+        </div>
+      </section>
+    </div>
+  </div>
+
+  <section class="container">
+    <div class="row">
+      <h2 class="light">Webinars</h2>
+      <p>Non esse nostrud cupidatat eu proident eiusmod sunt in aute.</p>
+      <div
+        id="webinars-carousel"
+        class="carousel"
+        data-carousel-type="steps"
+      ></div>
+    </div>
+  </section>
 </main>
