🚧 Add basic carousel feature
- Add rating template module

- Add author template module

- Add product card template module

- Add more static assets

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,10 +1,13 @@
 @import "navbar";
 @import "footer";
 @import "elements/hero";
-@import "elements/sections";
+@import "elements/section";
 @import "elements/table";
+@import "elements/carousel";
 @import "elements/categories";
-@import "elements/pills";
+@import "elements/pill";
+@import "elements/card";
+@import "elements/author";
 @import "pages/index";
 
 body {
