--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -3,6 +3,10 @@
     &:nth-child(2) {
       padding-top: 72px;
       padding-bottom: 28px;
+
+      .carousel {
+        margin-top: 26px;
+      }
     }
 
     &:nth-child(3) {
