--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -21,41 +21,41 @@
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
           </div>
         </div>
@@ -250,41 +250,41 @@
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
               <%= require('../partials/cards/product.html')({ title:
               "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
               ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              '/src/images/item-cover-1.jpg', author: { photo:
-              '/src/images/author-1.jpg', name: 'Chaya\ Davidson', company:
-              'Football\ Daily' }, rating: 4.55, price: 115.99 }) %>
+              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
+              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
+              115.99 }) %>
             </div>
           </div>
         </div>
