--- a/src/views/partials/cards/product.html
+++ b/src/views/partials/cards/product.html
@@ -1,6 +1,6 @@
 <div class="card" data-card-type="product" data-display-type="col">
   <div class="product-cover ratio ratio-1x1">
-    <img src="<%= cover %>" alt="" />
+    <img src="<%= require(`../../../images/${cover}`) %>" alt="" />
   </div>
   <div class="product-summary">
     <div class="row header">
