--- a/src/scss/elements/card.scss
+++ b/src/scss/elements/card.scss
@@ -8,6 +8,8 @@
     &[data-display-type="col"] {
       .product {
         &-cover {
+          border-radius: 24px 24px 0 0;
+          overflow: hidden;
         }
 
         &-summary {
@@ -94,6 +96,86 @@
                   font-weight: bold;
                   font-size: 22px;
                   line-height: 28px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &[data-card-type="video"] {
+    &[data-display-type="col"] {
+      .video {
+        &-cover {
+          border-radius: 24px 24px 0 0;
+          overflow: hidden;
+
+          .icon-play {
+            width: 64px;
+            height: 64px;
+            display: inline-flex;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -32px;
+            margin-left: -32px;
+
+            svg {
+              width: inherit;
+              height: inherit;
+
+              path {
+                fill: #fff;
+              }
+            }
+          }
+        }
+
+        &-summary {
+          padding: 12px 16px;
+
+          .title {
+            margin: 0;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 17px;
+            line-height: 22px;
+            letter-spacing: -0.408px;
+            color: #2e2b45;
+            height: 44px;
+            overflow: hidden;
+          }
+
+          .meta {
+            margin-bottom: 4px;
+
+            > span {
+              font-style: normal;
+              font-weight: normal;
+              font-size: 13px;
+              line-height: 18px;
+              letter-spacing: -0.078px;
+              color: rgba(46, 43, 69, 0.6);
+
+              &.bullet {
+                font-size: 10px;
+                margin: 0 2px;
+              }
+
+              i {
+                width: 12px;
+                height: 12px;
+                display: inline-flex;
+
+                svg {
+                  width: inherit;
+                  height: inherit;
+
+                  path {
+                    fill: rgba(46, 43, 69, 0.6);
+                  }
                 }
               }
             }
