--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -2,27 +2,88 @@
   > * {
     &:nth-child(2) {
       padding-top: 72px;
-      padding-bottom: 28px;
+      padding-bottom: 56px;
 
       .carousel {
-        margin-top: 26px;
+        margin-top: 20px;
+      }
+
+      .button {
+        background: #f8d178;
+        border-radius: 4px;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 21px;
+        text-align: center;
+        letter-spacing: -0.32px;
+        color: #2e2b45;
+        padding: 12px 16px;
+        width: auto;
+        margin: 32px auto 0;
       }
     }
 
     &:nth-child(3) {
       background-color: #2e2b45;
       padding-top: 28px;
-      margin-bottom: -47px;
+      margin-bottom: 83px;
+
+      .carousel {
+        margin-bottom: -71px;
+        margin-top: -16px;
+        padding-top: 36px;
+      }
     }
 
     &:nth-child(4) {
-      padding-top: 119px;
+      padding-top: 36px;
       padding-bottom: 36px;
+
+      section {
+        &:first-child,
+        &:last-child {
+          .button {
+            background: #f8d178;
+            border-radius: 4px;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 21px;
+            text-align: center;
+            letter-spacing: -0.32px;
+            color: #2e2b45;
+            padding: 12px 16px;
+            width: auto;
+            display: inline-block;
+            margin-top: 36px;
+          }
+        }
+      }
     }
 
     &:nth-child(5) {
       padding-top: 36px;
       padding-bottom: 56px;
+
+      .carousel {
+        margin-top: 20px;
+      }
+
+      .button {
+        background: #f8d178;
+        border-radius: 4px;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 21px;
+        text-align: center;
+        letter-spacing: -0.32px;
+        color: #2e2b45;
+        padding: 12px 16px;
+        width: auto;
+        margin: 32px auto 0;
+      }
     }
   }
 }
