--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -189,7 +189,13 @@
                 <div
                   class="col d-flex flex-row align-self-center justify-content-end"
                 >
-                  <button class="podcast-preview-button"></button>
+                  <div id="podcast-1" class="podcast-preview">
+                    <button class="preview-switch">
+                      <i
+                        ><%= require('../../images/icons/play.svg?inline') %></i
+                      >
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -221,7 +227,13 @@
                 <div
                   class="col d-flex flex-row align-self-center justify-content-end"
                 >
-                  <button class="podcast-preview-button"></button>
+                  <div id="podcast-2" class="podcast-preview">
+                    <button class="preview-switch">
+                      <i
+                        ><%= require('../../images/icons/play.svg?inline') %></i
+                      >
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -253,7 +265,13 @@
                 <div
                   class="col d-flex flex-row align-self-center justify-content-end"
                 >
-                  <button class="podcast-preview-button"></button>
+                  <div id="podcast-3" class="podcast-preview">
+                    <button class="preview-switch">
+                      <i
+                        ><%= require('../../images/icons/play.svg?inline') %></i
+                      >
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
