--- a/src/scss/elements/card.scss
+++ b/src/scss/elements/card.scss
@@ -163,6 +163,10 @@
                 font-size: 10px;
                 margin: 0 2px;
               }
+              &.premiere {
+                color: #e95244;
+                text-transform: uppercase;
+              }
 
               i {
                 width: 12px;
