--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -26,36 +26,31 @@
               115.99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Nulla\
+              Anim\ Sunt\ Labore\ Exercitation\ Labore\ Voluptate\ Commodo\
+              Excepteur\ Cillum\ Minim", cover: 'item-cover-2.jpg', author: {
+              photo: 'author-2.jpg', name: 'Chandni\ Craft', company: 'Global\
+              Cycling\ Network' }, rating: 4.92, price: 72.45 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Ea\
+              Veniam\ Cupidatat\ Ut\ Ad\ Veniam\ Id\ Anim\ Ad\ Enim\ Deserunt\
+              Dolor\ Nisi\ Esse\ Consectetur", cover: 'item-cover-3.jpg',
+              author: { photo: 'author-3.jpg', name: 'Bobbie\ Hudson', company:
+              'Daily\ Cyclist\ News' }, rating: 3.23, price: 99 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Lorem\
+              Labore\ Ullamco\ Et\ Est\ Labore\ Dolore\ Cillum", cover:
+              'item-cover-4.jpg', author: { photo: 'author-4.jpg', name: 'Dylan\
+              Atkins', company: 'GoSwim' }, rating: 1.5, price: 91.44 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Culpa\
+              Qui\ Veniam\ Do\ Occaecat\ Eiusmod\ Incididunt\ Nisi\ Dolore\
+              Labore\ Est\ Officia", cover: 'item-cover-5.jpg', author: { photo:
+              'author-5.jpg', name: 'Joel\ Becker', company: 'PGA\ Tour' },
+              rating: 5.00, price: 115.99 }) %>
             </div>
           </div>
         </div>
@@ -97,46 +92,36 @@
             <div class="carousel-items swiper-wrapper">
               <div class="carousel-item swiper-slide">
                 <%= require('../partials/cards/video.html')({ title:
-                "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-                ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-                'item-cover-1.jpg', duration: '24:12', views: 832 }) %>
+                "Weightlifting\ Series\ &#8211;\ Pound\ for\ Pound", cover:
+                'video-cover-1.jpg', duration: '24:12', views: 128, isPremiere:
+                false }) %>
               </div>
               <div class="carousel-item swiper-slide">
                 <%= require('../partials/cards/video.html')({ title:
-                "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-                ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-                'item-cover-1.jpg', duration: '24:12', views: 832 }) %>
+                "Weightlifting\ Series\ &#8211;\ Deadlift\ Injury\ Prevention",
+                cover: 'video-cover-2.jpg', duration: '32:01', views: 832,
+                isPremiere: false }) %>
               </div>
               <div class="carousel-item swiper-slide">
                 <%= require('../partials/cards/video.html')({ title:
-                "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-                ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-                'item-cover-1.jpg', duration: '24:12', views: 832 }) %>
+                "Weightlifting\ Series\ &#8211;\ The\ Benefits\ of\ Lifting\
+                for", cover: 'video-cover-3.jpg', duration: '24:12', views:
+                '3.1K', isPremiere: false }) %>
               </div>
               <div class="carousel-item swiper-slide">
                 <%= require('../partials/cards/video.html')({ title:
-                "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-                ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-                'item-cover-1.jpg', duration: '24:12', views: 832 }) %>
+                "Weightlifting\ Interview\ &#8211;\ Kendrick\ Farris", cover:
+                'video-cover-4.jpg', duration: '32:01', views: 999, isPremiere:
+                false }) %>
               </div>
               <div class="carousel-item swiper-slide">
                 <%= require('../partials/cards/video.html')({ title:
-                "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-                ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-                'item-cover-1.jpg', duration: '24:12', views: 832 }) %>
+                "Weightlifting\ Interview\ &#8211;\ James\ Tatum", cover:
+                'video-cover-5.jpg', duration: '24:12', views: 832, isPremiere:
+                true }) %>
               </div>
             </div>
           </div>
-          <!-- <div
-            class="carousel-nav-left d-flex align-items-center justify-content-center"
-          >
-            <%= require('/src/images/icons/arrow-left.svg?inline') %>
-          </div>
-          <div
-            class="carousel-nav-right d-flex align-items-center justify-content-center"
-          >
-            <%= require('/src/images/icons/arrow-right.svg?inline') %>
-          </div> -->
         </div>
       </div>
     </div>
@@ -309,44 +294,38 @@
         <div class="carousel-container swiper-container">
           <div class="carousel-items swiper-wrapper">
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Non\ Elit\
+              Massa\ Sit:\ Nam\ Orci\ Vestibulum", cover: 'webinar-cover-1.jpg',
+              author: { photo: 'author-1.jpg', name: 'Chaya\ Davidson', company:
+              'Football\ Daily' }, rating: 4.55, price: 23.12 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Morbi\
+              Condimentum\ Sed\ Scelerisque\ 2021", cover:
+              'webinar-cover-2.jpg', author: { photo: 'author-2.jpg', name:
+              'Chandni\ Craft', company: 'Global\ Cycling\ Network' }, rating:
+              4.18, price: 7.45 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Tortor\
+              Lorem\ Purus\ Aenean\ Elementum", cover: 'webinar-cover-3.jpg',
+              author: { photo: 'author-3.jpg', name: ['Bobbie\ Hudson', 'a',
+              'b'], company: 'Global\ Cycling\ Channel' }, rating: 3.77, price:
+              9.11 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Sapien\
+              Nibh\ Nisl\ Adipiscing\ Eget\ Conte", cover:
+              'webinar-cover-4.jpg', author: { photo: 'author-4.jpg', name:
+              ['Dylan\ Atkins', 'a', 'b', 'c', 'd'], company: 'GoSwim' },
+              rating: 5.00, price: 91.4 }) %>
             </div>
             <div class="carousel-item swiper-slide">
-              <%= require('../partials/cards/product.html')({ title:
-              "Exercitation\ commodo\ magna\ cillum\ officia\ amet\ mollit\
-              ullamco\ voluptate\ magna\ non\ id\ ad\ ipsum.", cover:
-              'item-cover-1.jpg', author: { photo: 'author-1.jpg', name: 'Chaya\
-              Davidson', company: 'Football\ Daily' }, rating: 4.55, price:
-              115.99 }) %>
+              <%= require('../partials/cards/product.html')({ title: "Turpis\
+              Tincidunt\ &#8211;\ Vel\ Diam\ Aliquet\ Internationale", cover:
+              'webinar-cover-5.jpg', author: { photo: 'author-5.jpg', name:
+              'Joel\ Becker', company: 'PGA\ Tour' }, rating: 0.62, price: 0 })
+              %>
             </div>
           </div>
         </div>
