--- a/src/views/partials/cards/product.html
+++ b/src/views/partials/cards/product.html
@@ -20,7 +20,13 @@
 
     <div class="footer d-flex justify-content-between align-items-center">
       <%= require('../rating.html')({value: rating}) %>
-      <div class="price"><span>$</span><span><%= price %></span></div>
+      <div class="price">
+        <% if(price > 0) { %>
+        <span>$</span><span><%= price %></span>
+        <% } else if (price <= 0) { %>
+        <span>Free</span>
+        <% } %>
+      </div>
     </div>
   </div>
 </div>
