🚧 Explore (Content List) page template

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,6 +9,7 @@
 @import "elements/card";
 @import "elements/author";
 @import "pages/index";
+@import "pages/explore.scss";
 
 body {
   min-height: 100vh;
