--- a/src/views/partials/navbar.html
+++ b/src/views/partials/navbar.html
@@ -39,15 +39,17 @@
 
   <nav class="mainbar-wrap d-flex" aria-label="Primary navigation">
     <div class="brand">
-      <img
-        src="<%= require('/src/images/logo.png') %>"
-        alt="Logo"
-        height="50"
-      />
+      <a href="/">
+        <img
+          src="<%= require('/src/images/logo.png') %>"
+          alt="Logo"
+          height="50"
+        />
+      </a>
     </div>
     <div class="module d-flex flex-row align-items-center">
       <div class="module-dropdown">
-        <a class="d-flex flex-row align-items-center" href=""
+        <a class="d-flex flex-row align-items-center" href="/explore"
           ><i><%= require('/src/images/icons/block.svg?inline') %></i>Explore</a
         >
       </div>
