--- a/src/views/partials/navbar.html
+++ b/src/views/partials/navbar.html
@@ -29,7 +29,10 @@
         </a>
       </li>
       <li>
-        <a class="button d-flex flex-row align-items-center" href="">
+        <a
+          class="button button-small button-primary d-flex flex-row align-items-center"
+          href=""
+        >
           <i><%= require('/src/images/icons/trend-up.svg?inline') %></i>
           <small> Trending Topics on SLO </small>
         </a>
