--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,3 +1,5 @@
+@use '../elements/button' as b;
+
 .index {
   > * {
     &:nth-child(2) {
@@ -9,16 +11,7 @@
       }
 
       .button {
-        background: #f8d178;
-        border-radius: 4px;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 21px;
-        text-align: center;
-        letter-spacing: -0.32px;
-        color: #2e2b45;
-        padding: 12px 16px;
+        @include b.button("medium", "secondary");
         width: auto;
         margin: 32px auto 0;
       }
@@ -44,18 +37,8 @@
         &:first-child,
         &:last-child {
           .button {
-            background: #f8d178;
-            border-radius: 4px;
-            font-style: normal;
-            font-weight: 600;
-            font-size: 16px;
-            line-height: 21px;
-            text-align: center;
-            letter-spacing: -0.32px;
-            color: #2e2b45;
-            padding: 12px 16px;
+            @include b.button("medium", "secondary");
             width: auto;
-            display: inline-block;
             margin-top: 36px;
           }
         }
@@ -71,16 +54,7 @@
       }
 
       .button {
-        background: #f8d178;
-        border-radius: 4px;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 21px;
-        text-align: center;
-        letter-spacing: -0.32px;
-        color: #2e2b45;
-        padding: 12px 16px;
+        @include b.button("medium", "secondary");
         width: auto;
         margin: 32px auto 0;
       }
