--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -4,7 +4,11 @@
       <div class="row">
         <div class="col-6 d-flex flex-column justify-content-center">
           <h1>Sports business contents now at your fingertips</h1>
-          <a href="#" class="button">Explore the Hub</a>
+          <a
+            href="/explore"
+            class="button button-large button-secondary align-self-start"
+            >Explore the Hub</a
+          >
         </div>
       </div>
     </div>
@@ -66,7 +70,9 @@
         </div>
         <div class="carousel-dots"></div>
       </div>
-      <a href="" class="button">See all lessons from the legends</a>
+      <a href="/explore" class="button button-medium button-secondary"
+        >See all lessons from the legends</a
+      >
     </div>
   </section>
 
@@ -262,7 +268,9 @@
             </div>
           </div>
         </div>
-        <a href="" class="button">See all podcasts</a>
+        <a href="/explore" class="button button-medium button-secondary"
+          >See all podcasts</a
+        >
       </section>
 
       <section class="col">
@@ -281,7 +289,9 @@
           ><a href="" class="pill">Event Management</a
           ><a href="" class="pill">Project Management</a>
         </div>
-        <a href="" class="button">Browse more categories</a>
+        <a href="/explore" class="button button-medium button-secondary"
+          >Browse more categories</a
+        >
       </section>
     </div>
   </div>
@@ -341,7 +351,9 @@
         </div>
         <div class="carousel-dots"></div>
       </div>
-      <a href="" class="button">See all webinars</a>
+      <a href="/explore" class="button button-medium button-secondary"
+        >See all webinars</a
+      >
     </div>
   </section>
 </main>
