⚡️ Regular stylesheets and theme improvement
- Rating stars are now in flat style

- Minor changes in Landing page theme

--- a/src/scss/elements/card.scss
+++ b/src/scss/elements/card.scss
@@ -73,6 +73,10 @@
                 svg {
                   width: inherit;
                   height: inherit;
+
+                  > path {
+                    fill: var(--brand-orange);
+                  }
                 }
               }
             }
