--- a/src/scss/elements/carousel.scss
+++ b/src/scss/elements/carousel.scss
@@ -5,20 +5,9 @@
   &[data-carousel-type="free-scroll"] {
   }
 
-  // &-container,
-  // &-items,
-  // &-item {
-  //   all: initial;
-  // }
-
   &-container {
-    // @extend .swiper-container;
     margin: 0 -24px -28px;
     padding: 0 24px 52px;
-  }
-
-  &-items {
-    // @extend .swiper-wrapper;
   }
 
   &-item {
@@ -49,17 +38,27 @@
       height: 48px;
       top: 50%;
       margin-top: -24px;
-      background: #ffffff;
+      background-color: var(--brand-white);
       box-shadow: 0px 28px 40px -1px rgba(14, 31, 53, 0.12);
       border-radius: 24px;
       z-index: 2;
+      transition: background-color 0.125s ease-in;
+
+      &:hover {
+        background-color: var(--brand-primary);
+
+        svg path {
+          fill: var(--brand-white);
+        }
+      }
 
       svg {
         width: 24px;
         height: 24px;
 
         path: {
-          fill: #2e2b45;
+          fill: var(--brand-primary);
+          transition: fill 0.125s ease-in;
         }
       }
     }
